Fixing some more layout issues.

--- a/static/global/style.css
+++ b/static/global/style.css
@@ -433,7 +433,7 @@ text-decoration: none;
   margin-bottom: 10px;
 }
 
-#page p,ul{
+#page p{
   line-height: 18px;
   margin-bottom: 15px;
   padding-left: 40px;
